--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
     height: 570px;
 }
 .shop {
+    position: absolute;
     box-sizing: border-box;
     vertical-align: auto;
     padding: 20px;
@@ -45,49 +46,49 @@
     height: 150px;
     border: 2px solid black;
 }
-.clothes:hover {
+/* .clothes:hover {
     background-color: rgb(230, 168, 216);
     color: black;
-}
+} */
 
 .sport {
     width: 200px;
     height: 400px;
     border: 2px solid black;
 }
-.sport:hover {
+/* .sport:hover {
     background-color: rgb(157, 240, 255);
     color: black;
-}
+} */
 
 .macdonalds {
     width: 300px;
     height: 300px;
     border: 2px solid black;
 }
-.macdonalds:hover {
+/* .macdonalds:hover {
     background-color:  rgb(218, 54, 33);
     color: rgb(255, 224, 88);
-}
+} */
 
 .kfc {
     width: 300px;
     height: 300px;
     border: 2px solid black;
 }
-.kfc:hover {
+/* .kfc:hover {
     background-color: rgb(218, 54, 33);
     color: rgb(255, 255, 255);
-}
+} */
 .burger-king {
     width: 300px;
     height: 300px;
     border: 2px solid black;
 }
-.burger-king:hover {
+/* .burger-king:hover {
     background-color: rgb(218, 153, 33);
     color: rgb(65, 67, 230);
-}
+} */
 
 .mt-10 {
     margin-top: 10px;
